update utilizadores 27 Nov
